--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -3,7 +3,7 @@
 
 # Run as a unique, less privileged user for security reasons.
 # Default: nobody nobody
-user www-data;
+user {{nginx_user}};
 
 # Sets the worker threads to the number of CPU cores available in the system for best performance.
 # Should be > the number of CPU cores.
