--- a/roles/tomcat/templates/tomcat.service.j2
+++ b/roles/tomcat/templates/tomcat.service.j2
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=forking
 
-Environment=JAVA_HOME={{ tomcat_java_home }}
+Environment=JAVA_HOME=/usr
 Environment=CATALINA_PID={{ tomcat_app_path }}/temp/tomcat.pid
 Environment=CATALINA_HOME={{ tomcat_app_path }}
 Environment=CATALINA_BASE={{ tomcat_app_path }}
