fixed php config path

--- a/roles/php-nginx/templates/app-debian.conf.j2
+++ b/roles/php-nginx/templates/app-debian.conf.j2
@@ -12,7 +12,7 @@ server {
 	}
 
 	location ~ ^/wp-(admin/|login\.php\b) {
-		include config/app/php-config.conf;
+		include config/php-config.conf;
 		#allow 103.216.59.40;    #office IP
 		#allow 203.76.222.14;	#Juyal vai home ip
 		#allow 178.86.7.157;	#tim IP
@@ -20,6 +20,6 @@ server {
 	}
 
 	location ~ \.php$ {
-		include config/app/php-config.conf;
+		include config/php-config.conf;
 	}
 }
