updated nginx config with fastcgi variable for different os architectures

--- a/roles/php-nginx/templates/app.conf.j2
+++ b/roles/php-nginx/templates/app.conf.j2
@@ -32,7 +32,7 @@ server {
 				try_files $uri $uri/ /index.php?q=$uri&$args;
 	}
 
-	# Add ELB healthcheck incase of https redirect
+	# Add ELB healthcheck in case of https redirect
 	location /health-check {
 					access_log off;
 					return 200;
@@ -121,7 +121,7 @@ server {
 				#deny all;
 
 				fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/run/php/php7.0-fpm.sock;
+        fastcgi_pass {{ fastcgi_pass }};
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
@@ -134,7 +134,7 @@ server {
         }
 
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/run/php/php7.0-fpm.sock;
+        fastcgi_pass {{ fastcgi_pass }};
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
