--- a/roles/tomcat/templates/app.conf.j2
+++ b/roles/tomcat/templates/app.conf.j2
@@ -2,6 +2,10 @@ server {
     listen 80;
     server_name _;
 
+    if ($http_x_forwarded_proto != 'https') {
+        return 301 https://$server_name$request_uri;
+    }
+
     location / {
         proxy_pass http://127.0.0.1:{{ app_port }};
         proxy_set_header Host $host;
