added css and js file loading rule

--- a/roles/php-nginx-wp/templates/app.conf.j2
+++ b/roles/php-nginx-wp/templates/app.conf.j2
@@ -19,6 +19,8 @@ server {
     		set $no_cache 1;
 	}
 
+    location ~* \.(?:css|js|map|jpe?g|gif|png)$ { }
+
 	location / {
 
 				proxy_set_header X-Forwarded-Host $host;
