--- a/roles/tomcat/templates/app.conf.j2
+++ b/roles/tomcat/templates/app.conf.j2
@@ -3,7 +3,7 @@ server {
     server_name _;
 
     if ($http_x_forwarded_proto != 'https') {
-        return 301 https://$server_name$request_uri;
+        return 301 https://$host$request_uri;
     }
 
     location / {
