--- a/roles/php-nginx-wp/templates/app.conf.j2
+++ b/roles/php-nginx-wp/templates/app.conf.j2
@@ -7,9 +7,9 @@ server {
 
 	client_max_body_size {{ nginx_file_upload_limit_mb }}M;
 
-	#if ($http_x_forwarded_proto != "https") {
-	#			rewrite ^ https://$host$request_uri permanent;
-	#}
+	if ($http_x_forwarded_proto != "https") {
+				rewrite ^ https://$host$request_uri permanent;
+	}
 
 	if ($query_string != "") {
     		set $no_cache 1;
