--- a/roles/uvdesk/templates/app.conf.j2
+++ b/roles/uvdesk/templates/app.conf.j2
@@ -1,5 +1,12 @@
+server_tokens off;
+add_header X-Frame-Options SAMEORIGIN;
+add_header X-Content-Type-Options "nosniff" always;
+add_header X-XSS-Protection "1; mode=block";
+add_header Strict-Transport-Security max-age=15768000;includeSubdomains
+
 server {
 
+	listen [::]:80;
 	listen 80;
 	server_name _;
 	charset utf-8;
